// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть крошки для дилера если указан каталог фильтр но нет офферов ни по одной марке 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "big-logo": undefined,
        "count": 0,
        "cyrillic_name": "Ауди",
        "id": "AUDI",
        "itemFilterParams": Object {
          "mark": "AUDI",
        },
        "logo": undefined,
        "name": undefined,
        "numeric_id": 3139,
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MARK_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MARK_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
]
`;

exports[`должен вернуть крошки для дилера с несколькими марками 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "big-logo": undefined,
        "count": 3,
        "cyrillic_name": "Ауди",
        "id": "AUDI",
        "itemFilterParams": Object {
          "mark": "AUDI",
        },
        "logo": undefined,
        "name": undefined,
        "numeric_id": 3139,
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
      Object {
        "big-logo": undefined,
        "count": 3,
        "cyrillic_name": "БМВ",
        "id": "BMW",
        "itemFilterParams": Object {
          "mark": "BMW",
        },
        "logo": undefined,
        "name": undefined,
        "numeric_id": 3141,
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MARK_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MARK_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
]
`;

exports[`должен вернуть крошки для дилера с одной маркой 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "big-logo": undefined,
        "count": 3,
        "cyrillic_name": "Ауди",
        "id": "AUDI",
        "itemFilterParams": Object {
          "mark": "AUDI",
        },
        "logo": undefined,
        "name": undefined,
        "numeric_id": 3139,
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MARK_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MARK_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
  Object {
    "entities": Array [
      Object {
        "count": 3,
        "cyrillic_name": "A4",
        "id": "A4",
        "itemFilterParams": Object {
          "model": "A4",
        },
        "name": undefined,
        "nameplates": Array [],
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MODEL_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MODEL_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
]
`;

exports[`должен вернуть крошки для дилера с одной маркой, если указан catalog_filter 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "big-logo": undefined,
        "count": 3,
        "cyrillic_name": "Ауди",
        "id": "AUDI",
        "itemFilterParams": Object {
          "mark": "AUDI",
        },
        "logo": undefined,
        "name": undefined,
        "numeric_id": 3139,
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MARK_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MARK_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
  Object {
    "entities": Array [
      Object {
        "count": 3,
        "cyrillic_name": "A4",
        "id": "A4",
        "itemFilterParams": Object {
          "model": "A4",
        },
        "name": undefined,
        "nameplates": Array [],
        "popular": undefined,
        "reviews_count": undefined,
        "year_from": undefined,
        "year_to": undefined,
      },
    ],
    "level": "MODEL_LEVEL",
    "levelFilterParams": Object {},
    "mark": undefined,
    "meta_level": "MODEL_LEVEL",
    "model": undefined,
    "offers_count": undefined,
  },
]
`;
